--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -4,7 +4,17 @@
 
 \eesTitlePage
 
-\eesCriticalReport{}
+\eesCriticalReport{
+  –   & –    & \B1 has been written by Copyist Zelenka 1 and substantially
+               revised by Jan Dismas Zelenka.
+               Bars 1–11, 20–27, and 58–62 are entirely in Zelenka’s hand.
+               It is unclear whether the abbreviation “G:K:” on the title page
+               truly refers to Kolberer as the author. \\
+  121 & A    & 1st \eighthNote\ in \B1: f′8 \\
+  140 & T    & 2nd \halfNote\ in \B1: d′2 \\
+  141 & T    & 5th \halfNote\ in \B1: a2 \\
+  153 & org  & upper voice missing in \B1 \\
+}
 
 \eesToc{}
 
